err/atreal.richfile.qualifier.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/atreal'...
Listing './lib/python3.5/site-packages/atreal/filestorage'...
Listing './lib/python3.5/site-packages/atreal/filestorage/common'...
Listing './lib/python3.5/site-packages/atreal/richfile'...
Listing './lib/python3.5/site-packages/atreal/richfile/qualifier'...
Listing './lib/python3.5/site-packages/atreal/richfile/qualifier/browser'...
Listing './lib/python3.5/site-packages/atreal/richfile/qualifier/browser/images'...
Compiling './lib/python3.5/site-packages/atreal/richfile/qualifier/common.py'...
***   File "./lib/python3.5/site-packages/atreal/richfile/qualifier/common.py", line 217
    print "viewlet : %s \n kss_id : %s" % (viewlet, self.kss_id)
                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/atreal/richfile/qualifier/events.py'...
***   File "./lib/python3.5/site-packages/atreal/richfile/qualifier/events.py", line 31
    except AttributeError, e:
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/atreal/richfile/qualifier/locales'...
Listing './lib/python3.5/site-packages/atreal/richfile/qualifier/locales/fr'...
Listing './lib/python3.5/site-packages/atreal/richfile/qualifier/locales/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/atreal/richfile/qualifier/profiles'...
Listing './lib/python3.5/site-packages/atreal/richfile/qualifier/profiles/default'...
Listing './lib/python3.5/site-packages/atreal.filestorage.common-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/atreal.richfile.qualifier-1.1.2.egg-info'...
Listing './lib/python3.5/site-packages/collective'...
Listing './lib/python3.5/site-packages/collective/monkeypatcher'...
Listing './lib/python3.5/site-packages/collective/monkeypatcher/tests'...
Listing './lib/python3.5/site-packages/collective.monkeypatcher-1.1.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
